bk_ida/gccida/g0/dump_new_line
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_new_line/src/tree-dump.c:609:53: error: use of undeclared identifier 'unk_816953'
fprintf( di_0->stream, "\n%*s", 25, ( const char *)&unk_816953); 
                                                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dump_new_line/src/obj/tree-dump.o] Error 1
